# parser-cartola-bancaria

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docker-image.yml  tests.yml
conversor/: field_def_registry.py
conversor/cli/: bank_statement.py  convert_to_actual.py
conversor/field_definitions/: banco_de_chile_cuenta_corriente_txt.json  banco_de_chile_tarjeta_credito_facturados_xls.json  banco_de_chile_tarjeta_credito_no_facturados_xls.json
conversor/parsers/: txt.py  xls.py
tests/: test_txt_parser.py
