[project]
name = "parser-cartola"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",    
    "selenium>=4.34.2",
    "xlrd>=2.0.2",
    "cachetools>=6.1.0",
    "pycryptodome>=3.23.0",
]

[project.scripts]
bank-statement = "conversor.cli.bank_statement:main"
convert-to-actual = "conversor.cli.convert_to_actual:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.25.0",
    "pre-commit>=4.2.0",
    "pandas-stubs>=2.3.0.250703",
    "pyright>=1.1.403",
    "ruff>=0.14.8",
]

[tool.setuptools]
packages = ["conversor"]

[tool.uv]
package = true

[tool.ruff]
fix = true
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "UP", # modernize python
    "RUF", # ruff specific rules
]
extend-ignore = [
    "E731" # lambda assignment
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
